# spectre

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  spectre.yaml.example
spectre/: __init__.py
spectre/adapters/: __init__.py
spectre/adversary/: __init__.py  campaign_detector.py  campaign_tracker.py  ttp_timeline.py
spectre/agent/: __init__.py  correlator.py  executor.py  llm.py  planner.py
spectre/api/: __init__.py  config.py  main.py
spectre/api/routers/: __init__.py  entities.py  investigations.py  plugins.py  reports.py  system.py  threat_actors.py
spectre/api/schemas/: __init__.py  finding.py  investigation.py
spectre/api/services/: __init__.py
spectre/api/websocket/: __init__.py  events.py  manager.py
spectre/chat/: __init__.py  adapter.py  discord.py  handler.py  slack.py  telegram.py
spectre/cli/: __init__.py  campaign.py  investigate.py  main.py  monitor.py  plugins_cmd.py
spectre/heartbeat/: __init__.py  alerts.py  diff.py  models.py  scheduler.py  store.py  watchers.py
spectre/intel/: __init__.py  attribution.py  enrichment.py  mitre_attack.py  report.py  ttp_tagger.py
spectre/models/: __init__.py  entities.py
spectre/plugins/: __init__.py  base.py  registry.py
spectre/plugins/adversary/: __init__.py
spectre/plugins/osint/: __init__.py  cert_transparency.py  dns_recon.py  subdomain_enum.py  whois_lookup.py
spectre/plugins/threat_intel/: __init__.py  abuse_ch.py  alienvault_otx.py  shodan_lookup.py  virustotal.py
spectre/services/: __init__.py  event_bus.py  investigation.py  models.py  store.py
tests/: conftest.py  test_chat.py  test_intel.py
tests/integration/: test_investigation.py
tests/unit/: test_dns_recon.py  test_registry.py  test_whois_lookup.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts  index.ts  investigations.ts  websocket.ts
web/src/components/common/: Button.tsx  Card.tsx  ClassifiedStamp.tsx  Terminal.tsx  ThreatBadge.tsx  Timestamp.tsx  index.ts
web/src/components/graph/: SpiderWebGraph.tsx  index.ts
web/src/components/investigations/: FindingsTable.tsx  InvestigationCard.tsx  InvestigationTimeline.tsx  NewInvestigationForm.tsx  ProgressBar.tsx  StatusIndicator.tsx  index.ts
web/src/components/layout/: AppLayout.tsx  GrainTexture.tsx  Header.tsx  ScanLineOverlay.tsx  Sidebar.tsx  Vignette.tsx  index.ts
web/src/components/threatActor/: WantedPoster.tsx  index.ts
web/src/hooks/: index.ts  useInvestigationSocket.ts  useInvestigations.ts
web/src/pages/: Dashboard.tsx  Entities.tsx  InvestigationDetail.tsx  Investigations.tsx  Plugins.tsx  Reports.tsx  Settings.tsx  ThreatActorDetail.tsx  ThreatActors.tsx  index.ts
web/src/types/: index.ts  investigation.ts
